--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta property="og:type" content="article" />
 <meta property="og:title" content="og title" />
 <meta property="og:description" content="og description" />
+<meta property="og:image" content="https://terrencehuang.github.io/test-article/images/cat-thumbnail.jpg" />
 </head>
 
 
