--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name='title' content="normal title" />
 <meta name='description' content="normal description" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta property="og:url" content="https://terrencehuang.github.io/test-article/" />
+<meta property="og:url" content="https://terrencehuang.github.io/test-article2/" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="og title" />
 <meta property="og:description" content="og description" />
