--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta property="og:type" content="article" />
 <meta property="og:title" content="og title" />
 <meta property="og:description" content="og description" />
-<meta property="og:image" content="/test-article6/images/cat-thumbnail.jpg" />
+<meta property="og:image" content="https://terrencehuang.github.io/test-article7/images/cat-thumbnail.jpg" />
 </head>
 
 
