--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <meta name='title' content="normal title" />
 <meta name='description' content="normal description" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta property="og:url" content="https://terrencehuang.github.io/test-article10/"/>
+<meta property="og:url" content="/test-article11/"/>
 <meta property="og:type" content="article" />
 <meta property="og:title" content="og title" />
 <meta property="og:description" content="og description" />
-<meta property="og:image" content="https://terrencehuang.github.io/test-article10/images/zendesk_thumbnail.jpg" />
+<meta property="og:image" content="https://terrencehuang.github.io/test-article11/images/zendesk_thumbnail.jpg" />
 </head>
 
 
