--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <meta name='title' content="normal title" />
 <meta name='description' content="normal description" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta property="og:url" content="/test-article12/"/>
+<meta property="og:url" content="/test-article13/"/>
 <meta property="og:type" content="article" />
 <meta property="og:title" content="og title" />
 <meta property="og:description" content="og description" />
-<meta property="og:image" content="/test-article12/images/zendesk_thumbnail.jpg" />
+<meta property="og:image" content="https://hips.hearstapps.com/hmg-prod/images/golden-retriever-royalty-free-image-506756303-1560962726.jpg" />
 </head>
 
 
