--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <meta name='title' content="normal title" />
 <meta name='description' content="normal description" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta property="og:url" content="https://terrencehuang.github.io/test-article16/"/>
+<meta property="og:url" content="https://terrencehuang.github.io/test-article17/"/>
 <meta property="og:type" content="article" />
 <meta property="og:title" content="og title" />
 <meta property="og:description" content="og description" />
-<meta property="og:image" content="https://learnmexc.zendesk.com/hc/article_attachments/16863397961497/thumbnail.jpg" />
+<meta property="og:image" content="https://learnmexc.zendesk.com/hc/article_attachments/15796223817753/thumbnail.png" />
 </head>
 
 
