--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta property="og:type" content="article" />
 <meta property="og:title" content="og title" />
 <meta property="og:description" content="og description" />
-<meta property="og:image" content="https://learnmexc.zendesk.com/hc/article_attachments/15796223817753/thumbnail.png" />
+<meta property="og:image" content="https://hips.hearstapps.com/hmg-prod/images/golden-retriever-royalty-free-image-506756303-1560962726.jpg" />
 </head>
 
 
